tests/assets/www/1.1/errors/retweet_failed.json.php
<?php

header('Content-Type: application/json; charset=UTF-8', true, 400);

?>
{
    "errors" : "sharing is not permissible for this status (Share validations failed)"
}
